update: scripts and server to allow static file serving... hopefully.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "node": ">=10.16.0"
   },
   "scripts": {
-    "start": "rm -rf dist && node server.js",
+    "dev": "yarn destroy & parcel ./html/index.html --no-cache",
+    "build": "yarn destroy & parcel build ./html/index.html --no-cache",
+    "start": "yarn destroy & node server.js",
+    "heroku-postbuild": "yarn build",
+    "destroy": "rm -rf dist",
     "purge": "rm -rf node_modules && yarn cache clean"
   },
   "dependencies": {
