--- a/package.json
+++ b/package.json
@@ -6,28 +6,25 @@
   "license": "MIT",
   "private": true,
   "engines": {
-    "node": ">=10.16.0"
+    "node": ">=10.21.0"
   },
   "scripts": {
-    "dev": "yarn destroy & parcel ./html/index.html --no-cache --https",
-    "compile": "yarn destroy & parcel build ./html/index.html --no-cache",
-    "start": "yarn destroy & node server.js",
+    "dev": "parcel ./html/index.html --no-cache --https",
+    "build": "parcel build ./html/index.html --no-cache",
     "serve": "node server.js",
-    "destroy": "rm -rf dist",
     "purge": "rm -rf node_modules && yarn cache clean"
   },
   "dependencies": {
-    "autoprefixer": "^9.7.4",
+    "autoprefixer": "^9.8.4",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nodemailer": "^6.4.5",
+    "nodemailer": "^6.4.10",
     "parcel-bundler": "^1.12.4",
-    "redirect-ssl": "^1.4.1",
-    "sass": "^1.26.3"
+    "redirect-ssl": "^2.0.0",
+    "sass": "^1.26.10"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "browserslist": "last 2 versions",
   "postcss": {
     "plugins": {
